replaced Author, Authors and User with User dto.