@@ -17,10 +17,12 @@
 
 package de.bushnaq.abdalla.projecthub.report.dao;
 
+import de.bushnaq.abdalla.projecthub.dto.User;
+
 import java.io.PrintStream;
 import java.util.*;
 
-public class AuthorsContribution extends TreeMap<String, AuthorContribution> {
+public class AuthorsContribution extends TreeMap<User, AuthorContribution> {
 
     MapValueCopmparator mapValueCopmparator = new MapValueCopmparator(this);
 
@@ -29,14 +31,14 @@ public class AuthorsContribution extends TreeMap<String, AuthorContribution> {
 
     }
 
-    public List<String> getSortedKeyList() {
-        List<String> authors = Arrays.asList(this.keySet().toArray(new String[0]));
+    public List<User> getSortedKeyList() {
+        List<User> authors = new ArrayList<>(List.of(this.keySet().toArray(new User[0])));
         Collections.sort(authors, mapValueCopmparator);
         return authors;
     }
 
     public void print(PrintStream out) {
-        for (String author : this.getSortedKeyList()) {
+        for (User author : this.getSortedKeyList()) {
             AuthorContribution authorContribution = this.get(author);
             out.printf("%10s ", author);
             authorContribution.print(out);
@@ -45,22 +47,22 @@ public class AuthorsContribution extends TreeMap<String, AuthorContribution> {
 
 }
 
-class MapValueCopmparator implements Comparator<String> {
+class MapValueCopmparator implements Comparator<User> {
     private static final String NON_CHARGEABLE = "1-Non-chargeable";
-    Map<String, AuthorContribution> referenceMap;
+    Map<User, AuthorContribution> referenceMap;
 
-    public MapValueCopmparator(Map<String, AuthorContribution> referenceMap) {
+    public MapValueCopmparator(Map<User, AuthorContribution> referenceMap) {
         this.referenceMap = referenceMap;
     }
 
     @Override
-    public int compare(String o1, String o2) {
-        if (o1.equals(NON_CHARGEABLE)) {
-            return 1;
-        }
-        if (o2.equals(NON_CHARGEABLE)) {
-            return -1;
-        }
+    public int compare(User o1, User o2) {
+//        if (o1.equals(NON_CHARGEABLE)) {
+//            return 1;
+//        }
+//        if (o2.equals(NON_CHARGEABLE)) {
+//            return -1;
+//        }
         AuthorContribution ac1 = referenceMap.get(o1);
         AuthorContribution ac2 = referenceMap.get(o2);
         return ac2.worked.plus(ac2.remaining).compareTo(ac1.worked.plus(ac1.remaining));
